include/mcp/c_api/mcp_c_api.h

/* ============================================================================
 * Library Version and Initialization
 * ============================================================================
 */

/**
 * Initialize the MCP library
 * Must be called before any other API functions
 * @param allocator Custom allocator (NULL for default)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_init(const mcp_allocator_t* allocator) MCP_NOEXCEPT;
/**
 * Check if library is initialized
 * @return MCP_TRUE if initialized
 */
MCP_API mcp_bool_t mcp_is_initialized(void) MCP_NOEXCEPT;
/**
 * Get library version information
 * @return Version string (do not free)
 */
MCP_API const char* mcp_get_version(void) MCP_NOEXCEPT;
/**
 * Write data (async)
 * @param connection Connection handle
 * @param data Data to write
 * @param length Data length
 * @param callback Write complete callback (optional)
 * @param user_data User data for callback
 * @return MCP_OK if write queued
 */
MCP_API mcp_result_t mcp_connection_write(mcp_connection_t connection,
                                          const uint8_t* data,
                                          size_t length,
                                          mcp_write_callback_t callback,
                                          void* user_data) MCP_NOEXCEPT;
/**
 * Set MCP message callbacks
 * @param server Server handle
 * @param request_cb Request callback
 * @param notification_cb Notification callback
 * @param user_data User data for callbacks
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_server_set_callbacks(mcp_server_t server,
                         mcp_request_callback_t request_cb,
                         mcp_notification_callback_t notification_cb,
                         void* user_data) MCP_NOEXCEPT;
/**
 * Register tool
 * @param server Server handle
 * @param tool Tool definition
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_register_tool(
    mcp_server_t server, const mcp_tool_t* tool) MCP_NOEXCEPT;
/**
 * Register resource template
 * @param server Server handle
 * @param resource Resource template
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_register_resource(
    mcp_server_t server, const mcp_resource_template_t* resource) MCP_NOEXCEPT;
/**
 * Register prompt
 * @param server Server handle
 * @param prompt Prompt definition
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_register_prompt(
    mcp_server_t server, const mcp_prompt_t* prompt) MCP_NOEXCEPT;
/**
 * Start server
 * @param server Server handle
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_start(mcp_server_t server) MCP_NOEXCEPT;
/**
 * Send response
 * @param server Server handle
 * @param request_id Request ID to respond to
 * @param result Result (JSON value)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_send_response(mcp_server_t server,
                                              mcp_request_id_t request_id,
                                              mcp_json_value_t result)
    MCP_NOEXCEPT;
/**
 * Send error response
 * @param server Server handle
 * @param request_id Request ID to respond to
 * @param error Error details
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_send_error(mcp_server_t server,
                                           mcp_request_id_t request_id,
                                           const mcp_jsonrpc_error_t* error)
    MCP_NOEXCEPT;
/**
 * Send notification
 * @param server Server handle
 * @param method Method name
 * @param params Parameters (JSON value)
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_server_send_notification(mcp_server_t server,
                                                  mcp_string_t method,
                                                  mcp_json_value_t params)
    MCP_NOEXCEPT;
/**
 * Stop server
 * @param server Server handle
 */
MCP_API void mcp_server_stop(mcp_server_t server) MCP_NOEXCEPT;
/**
 * Destroy server
 * @param server Server handle
 */
MCP_API void mcp_server_destroy(mcp_server_t server) MCP_NOEXCEPT;
/* ============================================================================
 * JSON Value Management with RAII
 * ============================================================================
 */

/**
 * Parse JSON from string
 * @param json JSON string
 * @return JSON value handle or NULL on error
 */
MCP_API mcp_json_value_t mcp_json_parse(mcp_string_t json) MCP_NOEXCEPT;
/**
 * Serialize JSON to string
 * @param value JSON value
 * @param pretty Whether to pretty-print
 * @return Serialized string (must be freed)
 */
MCP_API mcp_string_buffer_t* mcp_json_stringify(mcp_json_value_t value,
                                                mcp_bool_t pretty) MCP_NOEXCEPT;
/**
 * Clone JSON value
 * @param value JSON value
 * @return Cloned value
 */
MCP_API mcp_json_value_t mcp_json_clone(mcp_json_value_t value) MCP_NOEXCEPT;
/**
 * Release JSON value
 * @param value JSON value
 */
MCP_API void mcp_json_release(mcp_json_value_t value) MCP_NOEXCEPT;
/* ============================================================================
 * Utility Functions
 * ============================================================================
 */

/**
 * Create string from C string
 * @param str C string (can be NULL)
 * @return String structure
 */
MCP_API mcp_string_t mcp_string_from_cstr(const char* str) MCP_NOEXCEPT;
/**
 * Create string with length
 * @param data String data
 * @param length String length
 * @return String structure
 */
MCP_API mcp_string_t mcp_string_from_data(const char* data,
                                          size_t length) MCP_NOEXCEPT;
/**
 * Duplicate string
 * @param str String to duplicate
 * @return Duplicated string buffer (must be freed)
 */
MCP_API mcp_string_buffer_t* mcp_string_dup(mcp_string_t str) MCP_NOEXCEPT;
/**
 * Free string buffer
 * @param buffer String buffer
 */
MCP_API void mcp_string_buffer_free(mcp_string_buffer_t* buffer) MCP_NOEXCEPT;
/**
 * Create buffer
 * @param capacity Initial capacity
 * @return Buffer or NULL
 */
MCP_API mcp_buffer_t* mcp_buffer_create(size_t capacity) MCP_NOEXCEPT;
/**
 * Append to buffer
 * @param buffer Buffer
 * @param data Data to append
 * @param length Data length
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_append(mcp_buffer_t* buffer,
                                       const uint8_t* data,
                                       size_t length) MCP_NOEXCEPT;
/**
 * Get buffer data
 * @param buffer Buffer
 * @param out_data Output: buffer data
 * @param out_length Output: data length
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_get_data(mcp_buffer_t* buffer,
                                         const uint8_t** out_data,
                                         size_t* out_length) MCP_NOEXCEPT;
/**
 * Free buffer
 * @param buffer Buffer
 */
MCP_API void mcp_buffer_free(mcp_buffer_t* buffer) MCP_NOEXCEPT;
/* ============================================================================
 * Resource Statistics and Debugging
 * ============================================================================
 */

/**
 * Get resource statistics
 * @param active_count Output: number of active resources
 * @param total_created Output: total resources created
 * @param total_destroyed Output: total resources destroyed
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_get_resource_stats(size_t* active_count,
                                            size_t* total_created,
                                            size_t* total_destroyed)
    MCP_NOEXCEPT;
/**
 * Check for resource leaks
 * @return Number of leaked resources
 */
MCP_API size_t mcp_check_resource_leaks(void) MCP_NOEXCEPT;
/**
 * Print resource leak report
 */
MCP_API void mcp_print_leak_report(void) MCP_NOEXCEPT;