sdk/csharp/src/Interop/McpApi.cs


        /// <summary>
        /// Set MCP message callbacks
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_set_callbacks(
            McpServerHandle server,
            MCP_REQUEST_CALLBACK request_cb,
            MCP_NOTIFICATION_CALLBACK notification_cb,
            IntPtr user_data);

        /// <summary>
        /// Register tool
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_register_tool(
            McpServerHandle server,
            McpToolHandle tool);

        /// <summary>
        /// Register resource template
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_register_resource(
            McpServerHandle server,
            ref mcp_resource_template_t resource);

        /// <summary>
        /// Register prompt
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_register_prompt(
            McpServerHandle server,
            McpPromptHandle prompt);

        /// <summary>
        /// Start server
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_start(McpServerHandle server);

        /// <summary>
        /// Send response
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_send_response(
            McpServerHandle server,
            McpRequestIdHandle request_id,
            McpJsonValueHandle result);

        /// <summary>
        /// Send error response
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_send_error(
            McpServerHandle server,
            McpRequestIdHandle request_id,
            McpErrorHandle error);

        /// <summary>
        /// Send notification
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_server_send_notification(
            McpServerHandle server,
            mcp_string_t method,
            McpJsonValueHandle parameters);

        /// <summary>
        /// Stop server
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_stop(McpServerHandle server);

        /// <summary>
        /// Destroy server
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_destroy(McpServerHandle server);

        /* ============================================================================
         * JSON Value Management
         * ============================================================================ */

        /// <summary>
        /// Parse JSON from string
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpJsonValueHandle mcp_json_parse(mcp_string_t json);

        /// <summary>
        /// Serialize JSON to string
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_json_stringify(
            McpJsonValueHandle value,
            mcp_bool_t pretty);

        /// <summary>
        /// Clone JSON value
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpJsonValueHandle mcp_json_clone(McpJsonValueHandle value);

        /// <summary>
        /// Release JSON value
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_json_release(McpJsonValueHandle value);

        /* ============================================================================
         * Utility Functions
         * ============================================================================ */

        /// <summary>
        /// Create string from C string
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_string_t mcp_string_from_cstr(
            [MarshalAs(UnmanagedType.LPStr)] string str);

        /// <summary>
        /// Create string with length
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_string_t mcp_string_from_data(
            IntPtr data,
            UIntPtr length);

        /// <summary>
        /// Duplicate string
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_string_dup(mcp_string_t str);

        /// <summary>
        /// Free string buffer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_string_buffer_free(IntPtr buffer);

        /// <summary>
        /// Create buffer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern McpBufferHandle mcp_buffer_create(UIntPtr capacity);

        /// <summary>
        /// Append to buffer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_buffer_append(
            McpBufferHandle buffer,
            IntPtr data,
            UIntPtr length);

        /// <summary>
        /// Get buffer data
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_buffer_get_data(
            McpBufferHandle buffer,
            out IntPtr outData,
            out UIntPtr outLength);

        /// <summary>
        /// Free buffer
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_buffer_free(McpBufferHandle buffer);

        /* ============================================================================
         * Resource Statistics and Debugging
         * ============================================================================ */

        /// <summary>
        /// Get resource statistics
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_result_t mcp_get_resource_stats(
            out UIntPtr activeCount,
            out UIntPtr totalCreated,
            out UIntPtr totalDestroyed);

        /// <summary>
        /// Check for resource leaks
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_check_resource_leaks();

        /// <summary>
        /// Print resource leak report
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_print_leak_report();

        /* ============================================================================
         * Helper Methods
         * ============================================================================ */

        /// <summary>
        /// Helper to get version string
        /// </summary>
        public static string GetVersion()
        {
            var ptr = mcp_get_version();
            return ptr == IntPtr.Zero ? null : Marshal.PtrToStringAnsi(ptr);
        }

        /// <summary>
        /// Helper to initialize library with default allocator
        /// </summary>
        public static mcp_result_t Initialize()
        {
            return mcp_init(IntPtr.Zero);
        }

        /// <summary>
        /// Helper to check if initialized
        /// </summary>
        public static bool IsInitialized()
        {
            return mcp_is_initialized() != mcp_bool_t.False;
        }

        /// <summary>
        /// Helper to create string from managed string
        /// </summary>
        public static mcp_string_t CreateString(string str)
        {
            return str == null ? new mcp_string_t() : mcp_string_from_cstr(str);
        }

        /// <summary>
        /// Helper to duplicate string and get managed string
        /// </summary>
        public static string DuplicateString(mcp_string_t str)
        {
            var ptr = mcp_string_dup(str);
            if (ptr == IntPtr.Zero)
                return null;
                
            var result = Marshal.PtrToStringAnsi(ptr);
            mcp_string_buffer_free(ptr);
            return result;
        }

        /// <summary>
        /// Helper to write data to connection
        /// </summary>
        public static mcp_result_t ConnectionWrite(McpConnectionHandle connection, byte[] data)
        {
            if (data == null || data.Length == 0)
                return mcp_result_t.MCP_ERROR_INVALID_ARGUMENT;
                
            var handle = GCHandle.Alloc(data, GCHandleType.Pinned);
            try
            {
                return mcp_connection_write(
                    connection,
                    handle.AddrOfPinnedObject(),
                    new UIntPtr((uint)data.Length),
                    null,
                    IntPtr.Zero);
            }
            finally
            {
                handle.Free();
            }
        }

        /// <summary>
        /// Helper to append data to buffer
        /// </summary>
        public static mcp_result_t BufferAppend(McpBufferHandle buffer, byte[] data)
        {
            if (data == null || data.Length == 0)
                return mcp_result_t.MCP_ERROR_INVALID_ARGUMENT;
                
            var handle = GCHandle.Alloc(data, GCHandleType.Pinned);
            try
            {
                return mcp_buffer_append(
                    buffer,
                    handle.AddrOfPinnedObject(),
                    new UIntPtr((uint)data.Length));
            }
            finally
            {
                handle.Free();
            }
        }

        /// <summary>
        /// Helper to get buffer data as byte array
        /// </summary>
        public static byte[] BufferGetData(McpBufferHandle buffer)
        {
            if (buffer == null || buffer.IsInvalid)
                return null;
                
            IntPtr dataPtr;
            UIntPtr length;
            
            var result = mcp_buffer_get_data(buffer, out dataPtr, out length);
            if (result != mcp_result_t.MCP_OK || dataPtr == IntPtr.Zero)
                return null;
                
            var data = new byte[(int)length];
            Marshal.Copy(dataPtr, data, 0, data.Length);
            return data;
        }
    }
}